--- a/package.json
+++ b/package.json
@@ -17,6 +17,19 @@
   },
   "homepage": "https://github.com/bary822/graphQL-techtalk#readme",
   "dependencies": {
-    "graphql": "^0.8.2"
+    "assert": "^1.4.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-relay-plugin": "^0.10.0",
+    "express": "^4.14.0",
+    "express-graphql": "^0.6.1",
+    "graphql": "^0.8.2",
+    "mongodb": "^2.2.17",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-relay": "^0.10.0",
+    "webpack": "^1.14.0"
   }
 }
